// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimpleSearchComponent /> should render with passed props 1`] = `
preact-render-spy (1 nodes)
-------
<div class="template-custom-class">
  <div>Render this --> Apisearch</div>
</div>

`;

exports[`<SimpleSearchComponent /> should update with new data 1`] = `
preact-render-spy (1 nodes)
-------
<div class="template-custom-class">
  <div>Render this --> Apisearch UI</div>
</div>

`;
